# safety_guard_updated

./: .gitignore  README.md  pyproject.toml
docs/: 1_quickstart.md  2_architecture.md  3_workflow.md  4_guardrails.md
examples/: chainlit_demo.py  groq_llm_guardrail_example.py  input_validation_example.py  jailbreak_example.py  llm_guardrail_example.py  output_validation_example.py  prompt_injection_example.py  toxicity_example.py
src/guardrail_utils/: __init__.py  _result_helpers.py  scoring.py
src/guardrail_utils/client/: __init__.py  azure_openai_client.py  bedrock_client.py  factory.py  openai_client.py
src/guardrail_utils/config/: __init__.py  settings.py
src/guardrail_utils/core/: __init__.py
src/guardrail_utils/detectors/: __init__.py  heuristic_detector.py  llm_detector.py  regex_detector.py
src/guardrail_utils/engine/: __init__.py  guardrail_engine.py  middleware.py  pipeline.py
src/guardrail_utils/guardrails/: __init__.py  base.py  semantic.py
src/guardrail_utils/llm/: __init__.py  azure_openai_client.py  base_client.py  bedrock_client.py  factory.py  openai_client.py
src/guardrail_utils/llm_guardrails/: README.md  __init__.py  semantic.py
src/guardrail_utils/logging/: __init__.py  logger.py
src/guardrail_utils/models/: __init__.py  guardrail_result.py  policy_result.py  schemas.py
src/guardrail_utils/monitoring/: __init__.py  metrics.py  telemetry.py  tracing.py
src/guardrail_utils/policies/: __init__.py  input_policy.py  security_policy.py
src/guardrail_utils/utils/: __init__.py
tests/: test_clients_logging_examples.py  test_guardrails.py  test_llm_guardrails.py
(+30 files in other folders)
