[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardrail-utils"
version = "0.1.0"
description = "Reusable AI guardrails middleware for agent, RAG, workflow, and tool-calling systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Guardrail Utils Contributors" }]
keywords = ["ai", "guardrails", "llm", "agents", "safety", "moderation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
openai = ["openai>=1.0"]
azure = ["openai>=1.0"]
bedrock = ["boto3>=1.34"]
chainlit = ["chainlit>=1.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "PyYAML>=6.0", "build>=1.2"]
all = ["openai>=1.0", "boto3>=1.34", "chainlit>=1.0", "PyYAML>=6.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "PyYAML>=6.0", "build>=1.2"]

[project.urls]
Homepage = "https://example.com/guardrail-utils"
Source = "https://example.com/guardrail-utils"

[tool.hatch.build.targets.wheel]
packages = ["src/guardrail_utils"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
